implemented sign-up, sign-in, logout
Basic functionality for API users methods

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="row">
-<p>home works!</p>
-<app-sign-in></app-sign-in>
-<p>where's the app-sign-in</p>
-
+    <app-sign-up></app-sign-up>
+    <hr class="m-1">
+    <app-sign-in></app-sign-in>
 </div>
