--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,2 +1,26 @@
-<p>sign-in works!</p>
-<!-- <button class="btn btn-primary" (click)="onSubmit()"></button> -->
+<div class="row">
+    <div class="col-xs-6">
+        <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+                <div class="form-group m-1">
+                    <label for="email">Email</label>
+                    <input
+                        type="email"
+                        id="email"
+                        formControlName="email"
+                        class="form-control"
+                    />
+                    <label for="password">Password</label>
+                    <input
+                        type="password"
+                        id="password"
+                        formControlName="password"
+                        class="form-control"
+                    />
+                </div>
+            </div>
+            <button class="btn btn-success m-1" type="submit">Sign In</button>
+            <button class="btn btn-danger m-1" type="button" (click)="logout()">Logout</button>
+        </form>
+    </div>
+</div>
