--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,8 +1,55 @@
-<p>Sign Up</p>
 <div class="row">
     <div class="col-xs-6">
         <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-            <input type="email" formControlName="email" />
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="form-group m-1">
+                        <label for="email">Email</label>
+                        <input
+                            type="email"
+                            id="email"
+                            formControlName="email"
+                            class="form-control"
+                        />
+                        <label for="firstName">First Name</label>
+                        <input
+                            type="text"
+                            id="firstName"
+                            formControlName="firstName"
+                            class="form-control"
+                        />
+                        <label for="lastName">Last Name</label>
+                        <input
+                            type="text"
+                            id="lastName"
+                            formControlName="lastName"
+                            class="form-control"
+                        />
+                        <label for="nickname">Nickname</label>
+                        <input
+                            type="text"
+                            id="nickname"
+                            formControlName="nickname"
+                            class="form-control"
+                        />
+                        <label for="password">Password</label>
+                        <input
+                            type="password"
+                            id="password"
+                            formControlName="password"
+                            class="form-control"
+                        />
+                        <label for="passwordConfirmation">Confirm Password</label>
+                        <input
+                            type="password"
+                            id="passwordConfirmation"
+                            formControlName="passwordConfirmation"
+                            class="form-control"
+                        />
+                    </div>
+                    <button class="btn btn-primary m-1">Sign Up</button>
+                </div>
+            </div>
         </form>
     </div>
 </div>
