more styling and working on routes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,3 +3,9 @@
     <hr class="m-1">
     <app-sign-in></app-sign-in>
 </div>
+
+<div class="row">
+  <div class="card">
+    <span>Welcome to HomeComponent</span>
+  </div>
+</div>
