--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="outer-container">
-  <div class="inner-container">
     <app-header></app-header>
-    <app-home></app-home>
-  </div>
+    <div class="inner-container">
+      <router-outlet></router-outlet>
+        <app-home></app-home>
+    </div>
 </div>
