--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Header</a>
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <!-- <a class="navbar-brand" href="#"></a>
+    <img src="assets/img/logo.png" alt="movie logo">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    </button> -->
+        <div class="logo">
+            <a class="navbar-left">
+                <img src="../../assets/img/logo.PNG" />
+            </a>
+            <span class="navbar-brand m-2">The Movie App</span>
+        </div>
+        <ul class="navbar-nav ">
+          <li class="nav-item">sign in</li>
+        </ul>
+        <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon">&#9776;</span>
+        </button>
+
+        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -32,5 +46,5 @@
         <button class="btn btn-outline-primary" type="submit">Search</button>
       </form>
     </div> -->
-  </div>
+    </div>
 </nav>
