--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-6">
+    <div class="col">
         <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="form-group m-1">
