a lot of styling and some functionality for login/logout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
-<div class="outer-container">
-    <app-header></app-header>
-    <div class="inner-container">
-      <router-outlet></router-outlet>
-        <app-home></app-home>
+<div class="app-container">
+    <div class="outer-container">
+        <div class="sticky-header">
+            <app-header></app-header>
+        </div>
+        <div class="inner-container">
+            <div class="content">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+    <div class="footer-container">
+        <div class="footer-content">
+            <app-footer></app-footer>
+        </div>
     </div>
 </div>
