--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,15 @@
-<div class="row">
+<!-- <div class="row">
     <app-sign-up></app-sign-up>
     <hr class="m-1">
     <app-sign-in></app-sign-in>
-</div>
+</div> -->
 
 <div class="row">
-  <div class="card">
-    <span>Welcome to HomeComponent</span>
+  <div class="card mg-card">
+    <img class="card-img" src="../../assets/img/movie-guy.png" alt="movie guy">
+    <div class="card-container">
+      <hr><b>The Movie App</b>
+      <p>COMING SOON</p>
+    </div>
   </div>
 </div>
