--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,71 @@
-<nav class="navbar navbar-expand-lg">
+<!-- <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#"></a>
-    <img src="assets/img/logo.png" alt="movie logo">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
         <div class="logo">
-            <a class="navbar-left">
+            <a class="navbar-left" routerLink="/home">
                 <img src="../../assets/img/logo.PNG" />
             </a>
-            <span class="navbar-brand m-2">The Movie App</span>
+            <span class="navbar-brand m-2" routerLink="/home">The Movie App</span>
         </div>
-        <ul class="navbar-nav ">
-          <li class="nav-item">sign in</li>
+        <ul class="navbar-nav">
+            <li class="nav-item">sign in</li>
         </ul>
-        <button class="navbar-toggler shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon">&#9776;</span>
+        <button
+            class="navbar-toggler shadow-none"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+        >
+            <span class="navbar-toggler-icon">&#9776;</span>
         </button>
+    </div></nav> -->
+<nav class="navbar navbar-expand-md mb-3">
+    <div class="logo p-2" routerLink="/home">
+        <a class="navbar-left">
+            <img src="../../assets/img/logo.PNG" />
+        </a>
+        <span class="navbar-brand p-2">The Movie App</span>
+    </div>
+    <button
+        class="navbar-toggler shadow-none"
+        type="button"
+        (click)="collapsed = !collapsed"
+    >
+        &#9776;
+    </button>
+    <div class="navbar-collapse" [class.collapse]="collapsed">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item" ngbDropdown>
+                <span
+                    class="header-link"
+                    ngbDropdownToggle
+                    routerLink="/sign-in"
+                    role="button"
+                    *ngIf="!user"
+                    >sign in</span
+                >
+            </li>
+            <li class="nav-item" ngbDropdown>
+                <span
+                    class="header-link"
+                    ngbDropdownToggle
+                    routerLink="/sign-up"
+                    role="button"
+                    *ngIf="!user"
+                    >sign up</span
+                >
+            </li>
+            <li class="nav-item" ngbDropdown>
+              <span class="header-link" ngbDropdownToggle role="button" *ngIf="user" (click)="logout()">logout</span>
+            </li>
+        </ul>
+        <span *ngIf="user">{{user.nickname}} ({{user.email}})</span>
+    </div>
+</nav>
 
-        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -46,5 +93,3 @@
         <button class="btn btn-outline-primary" type="submit">Search</button>
       </form>
     </div> -->
-    </div>
-</nav>
