--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -2,50 +2,50 @@
     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
         <div class="row">
             <div class="form-group m-1">
-                <label for="email">Email</label>
+                <label for="email">email</label>
                 <input
                     type="email"
                     id="email"
                     formControlName="email"
-                    class="form-control"
+                    class="form-control mg-input"
                 />
-                <label for="firstName">First Name</label>
+                <label for="firstName">first name</label>
                 <input
                     type="text"
                     id="firstName"
                     formControlName="firstName"
-                    class="form-control"
+                    class="form-control mg-input"
                 />
-                <label for="lastName">Last Name</label>
+                <label for="lastName">last name</label>
                 <input
                     type="text"
                     id="lastName"
                     formControlName="lastName"
-                    class="form-control"
+                    class="form-control mg-input"
                 />
-                <label for="nickname">Nickname</label>
+                <label for="nickname">nickname</label>
                 <input
                     type="text"
                     id="nickname"
                     formControlName="nickname"
-                    class="form-control"
+                    class="form-control mg-input"
                 />
-                <label for="password">Password</label>
+                <label for="password">password</label>
                 <input
                     type="password"
                     id="password"
                     formControlName="password"
-                    class="form-control"
+                    class="form-control mg-input"
                 />
-                <label for="passwordConfirmation">Confirm Password</label>
+                <label for="passwordConfirmation">confirm password</label>
                 <input
                     type="password"
                     id="passwordConfirmation"
                     formControlName="passwordConfirmation"
-                    class="form-control"
+                    class="form-control mg-input"
                 />
             </div>
         </div>
-        <button class="btn btn-primary m-1">Sign Up</button>
+        <button class="btn mg-btn m-1">sign up</button>
     </form>
 </div>
