--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,11 +5,29 @@
 </div> -->
 
 <div class="row">
-  <div class="card mg-card">
-    <img class="card-img" src="../../assets/img/movie-guy.png" alt="movie guy">
     <div class="card-container">
-      <hr><b>The Movie App</b>
-      <p>COMING SOON</p>
+        <div class="card">
+            <img class="card-img" src="../../assets/img/movie-guy.png" alt="movie guy" />
+            <hr />
+            <div class="card-text">
+                <b>The Movie App</b>
+                <p>COMING SOON</p>
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+<br />
+<div class="row">
+    <div class="home-container">
+        <span
+            >while you wait you can
+            <button class="btn btn-outline" routerLink="/sign-up">
+                create an account
+            </button>
+            or
+            <button class="btn btn-outline">
+                some other unimplemented feature
+            </button></span
+        >
+    </div>
 </div>
