--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -19,8 +19,11 @@
                     />
                 </div>
             </div>
-            <button class="btn mg-btn m-1" type="submit">sign in</button>
-            <button class="btn mg-btn m-1" type="button" (click)="logout()">logout</button>
+            <button class="btn" type="submit">sign in</button>
+            <!-- <button class="btn" type="button" (click)="logout()">
+                logout
+            </button> -->
         </form>
+        <span>Not a user? <a class="sign-up-link" routerLink="/sign-up">Register</a></span>
     </div>
 </div>
