--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,32 +1,11 @@
-<!-- <nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg mb-3">
     <div class="container-fluid">
-        <div class="logo">
-            <a class="navbar-left" routerLink="/home">
-                <img src="../../assets/img/logo.PNG" />
-            </a>
-            <span class="navbar-brand m-2" routerLink="/home">The Movie App</span>
-        </div>
-        <ul class="navbar-nav">
-            <li class="nav-item">sign in</li>
-        </ul>
-        <button
-            class="navbar-toggler shadow-none"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon">&#9776;</span>
-        </button>
-    </div></nav> -->
-<nav class="navbar navbar-expand-md mb-3">
-    <div class="logo p-2" routerLink="/home">
+      <div class="logo p-2" routerLink="/home">
         <a class="navbar-left">
             <img src="../../assets/img/logo.PNG" />
         </a>
         <span class="navbar-brand p-2">The Movie App</span>
+        <span class="">blah blah</span>
     </div>
     <button
         class="navbar-toggler shadow-none"
@@ -36,7 +15,8 @@
         &#9776;
     </button>
     <div class="navbar-collapse" [class.collapse]="collapsed">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ms-auto"></ul>
+        <ul class="navbar-nav me-5px">
             <li class="nav-item" ngbDropdown>
                 <span
                     class="header-link"
@@ -58,38 +38,17 @@
                 >
             </li>
             <li class="nav-item" ngbDropdown>
-              <span class="header-link" ngbDropdownToggle role="button" *ngIf="user" (click)="logout()">logout</span>
+                <span
+                    class="header-link"
+                    ngbDropdownToggle
+                    role="button"
+                    *ngIf="user"
+                    (click)="logout()"
+                    >logout</span
+                >
             </li>
         </ul>
-        <span *ngIf="user">{{user.nickname}} ({{user.email}})</span>
+        <span *ngIf="user">{{ user.nickname }} ({{ user.email }})</span>
+    </div>
     </div>
 </nav>
-
-<!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
-      </form>
-    </div> -->
