--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
 <br />
 <div class="row">
     <div class="home-container">
-        <span
+        <span class="p-2"
             >while you wait you can
             <button class="btn btn-outline" routerLink="/sign-up">
                 create an account
