--- a/src/styles.scss
+++ b/src/styles.scss
@@ -199,6 +199,8 @@ select:-webkit-autofill:focus {
 
 .profile-card {
     background-clip: padding-box;
+    padding: 3px;
+    margin: 10px;
     box-shadow: 0px 2px 8px 2px var(--color-red);
     transition: 0.3s;
     border-radius: 10px;
