--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
                 create an account
             </button>
             or
-            <button class="btn btn-outline">
+            <button class="btn btn-outline" routerLink="/asdf">
                 some other unimplemented feature
             </button></span
         >
