--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,12 @@
-<p>page-not-found works!</p>
+<div class="not-found-wrapper">
+<div class="row">
+  <h1 class="p-2" style="font-size: 100px">Oops!</h1>
+</div>
+<br>
+<div class="row">
+  <h5 class="p-2">I can't seem to find the page you're looking for...</h5>
+</div>
+<div class="row">
+    <img src="../../assets/img/dog.png" alt="" />
+</div>
+</div>
