check in for bed for the evening
movies still unfinished

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,55 +3,18 @@
     <hr class="m-1">
     <app-sign-in></app-sign-in>
 </div> -->
-
+<nav class="navbar navbar-expand-sm">
+<ul class="navbar-nav ms-auto"></ul>
+<ul class="navbar-nav me-10px">
+  <li class="nav-item">
+    <span class="header-link">movies</span>
+  </li>
+</ul>
+</nav>
 <div class="row">
-    <div class="card-container">
-        <div class="card">
-            <img class="card-img" src="../../assets/img/movie-guy.png" alt="movie guy" />
-            <hr />
-            <div class="card-text">
-                <b>The Movie App</b>
-                <p>COMING SOON</p>
-            </div>
-        </div>
-    </div>
-    <div class="movies-container" *ngIf="movies">
-        <div class="profile-card card-body" *ngFor="let m of movies">
-            <table class="table-borderless profile-table">
-                <tbody>
-                    <tr>
-                        <td class="profile-table-category">title</td>
-                        <td>{{ m.title }}</td>
-                    </tr>
-                    <tr>
-                        <td class="profile-table-category">year</td>
-                        <td>{{ m.year }}</td>
-                    </tr>
-                    <tr>
-                        <td class="profile-table-category">director</td>
-                        <td>{{ m.director }}</td>
-                    </tr>
-                    <tr>
-                        <td class="profile-table-category">rating</td>
-                        <td>{{ m.parental_rating }}</td>
-                    </tr>
-                    <tr>
-                        <td class="profile-table-category">reviews:</td>
-                        <td *ngFor="let r of movies.reviews">
-                            <div class="row">
-                                {{ r.title }} - {{ r.rating }}
-                            </div>
-                            <div class="row">
-                                {{ r.body }}
-                            </div>
-                            {{ r.created_at }}
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+  <app-movies></app-movies>
 </div>
+
 <br />
 <div class="row">
     <div class="home-container">
