--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -28,10 +28,12 @@
                         <td class="profile-table-category">nickname</td>
                         <td>{{ user.nickname }}</td>
                     </tr>
-                    <tr></tr>
+                    <tr>
+                        <td class="profile-table-category">id</td>
+                        <td>{{ user.id }}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
     </div>
 </div>
-
