--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,20 +3,27 @@
     <hr class="m-1">
     <app-sign-in></app-sign-in>
 </div> -->
-<nav class="navbar navbar-expand-sm">
-<ul class="navbar-nav ms-auto"></ul>
-<ul class="navbar-nav me-10px">
-  <li class="nav-item">
-    <span class="header-link">movies</span>
-  </li>
-</ul>
-</nav>
-<div class="row">
-  <app-movies></app-movies>
-</div>
+<div class="home-container">
+    <nav class="navbar navbar-expand-sm">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <span class="header-link" routerLink="/movies">the movie db</span>
+            </li>
+            <li class="nav-item">
+                <span class="header-link" routerLink="./add" style="font-size: 80%"
+                    >add a movie to our db</span
+                >
+            </li>
+        </ul>
+    </nav>
+    <div class="row">
+      <router-outlet></router-outlet>
+        <div *ngIf="isHomeRoute()"><app-movies></app-movies></div>
+    </div>
 
-<br />
-<div class="row">
+    <br />
+</div>
+<!-- <div class="row">
     <div class="home-container">
         <span class="p-2"
             >while you wait you can
@@ -29,4 +36,4 @@
             </button></span
         >
     </div>
-</div>
+</div> -->
