--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,11 @@
 
 .home-container {
     padding: 50px inset;
+    min-width: 500px;
+}
+
+.home-header-link {
+    margin-block-end: auto;
 }
 
 .navbar {
@@ -65,6 +70,11 @@
 }
 
 .nav-item {
+    padding: 10px;
+    margin: 2px;
+}
+
+.nav-item-left {
     padding: 10px;
     margin: 2px;
 }
@@ -267,4 +277,24 @@ tr {
 
 .not-found-wrapper {
     margin: 50px;
+}
+
+.page-link {
+    border-radius: 5px 5px;
+}
+
+.movies-container {
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+    padding: 10px;
+}
+
+ngb-pagination {
+    margin: auto;
+    margin-top: 5%;
+}
+
+.ratings-option {
+  color: var(--color-blue);
 }
