--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -27,6 +27,10 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="row delete-link-container">
+              <a *ngIf="showDeleteButton()" class="delete-link" (click)="deleteMovie()">delete</a>
+            </div>
         </div>
     </div>
+
 </div>
