--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -6,6 +6,9 @@
         >
         <ng-template ngbPaginationNext>Next</ng-template></ngb-pagination
     >
+    <span
+        ><app-movie-card [user]="user" [movie]="movies[page - 1]"></app-movie-card
+    ></span>
 
-    <span><app-movie-card [user]="user" [movie]="movies[page - 1]"></app-movie-card></span>
+    
 </div>
