--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -24,6 +24,6 @@
                 logout
             </button> -->
         </form>
-        <span>Not a user? <a class="sign-up-link" routerLink="/sign-up">Register</a></span>
+        <span>Not a user? <a class="action-link" routerLink="/sign-up">Register</a></span>
     </div>
 </div>
