--- a/src/app/review-card/review-card.component.html
+++ b/src/app/review-card/review-card.component.html
@@ -1,1 +1,30 @@
-<p>review-card works!</p>
+<div class="review-card-container">
+    <div class="review-card">
+        <div class="review-card-title">reviews ({{reviews.length}})</div>
+        <div class="review-card-body" *ngIf="reviews.length > 0">
+            <table class="table-borderless review-card-table" *ngFor="let review of reviews">
+                <div class="review-card-content">
+                  <tbody>
+                    <tr>
+                        <td class="review-card-title-table-category" ></td>
+                        <td>{{ review.title }}</td>
+                    </tr>
+                    <tr>
+                        <td class="review-card-table-category"></td>
+                        <td>{{ review.body }}</td>
+                    </tr>
+                    <tr>
+                        <td class="review-card-table-category"></td>
+                        <td>{{ review.rating }} / 5</td>
+                    </tr>
+                </tbody>
+                </div>
+                <hr>
+            </table>
+        </div>
+        <div  *ngIf="reviews.length == 0">
+          <span class="review-card-table-category">Hmm... there are no reviews for this movie yet.  Be the first to add one!</span>
+        </div>
+    </div>
+    <!-- <P>sup</P> -->
+</div>
