added timestamp, edited timestamp, pipe for formatting

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
                 <span class="header-link" routerLink="./add" style="font-size: 80%"
                     >add a movie to our db</span
                 >
-                <span class="header-link" style="font-size: 80%;">view all reviews</span>
+                <span class="header-link" style="font-size: 80%;" routerLink="/all-reviews">view all reviews</span>
             </li>
         </ul>
     </nav>
