--- a/src/styles.scss
+++ b/src/styles.scss
@@ -358,3 +358,10 @@ tr {
     font-size: 200%;
 }
 
+.review-card-timestamp {
+  display: flex;
+  color: var(--color-blue);
+  font-size: 90%;
+  justify-content: center;
+}
+
